// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Atoms/Input InputAllSize smoke-test 1`] = `
<div style="display: flex; flex-direction: column; gap: 30px;">
  <div style="display: flex; flex-direction: column; gap: 30px;">
    <input placeholder="This is normal input"
           class="sc-iBAaJG djhrVw"
    >
    <input placeholder="This is big input"
           class="sc-iBAaJG djhssT"
    >
  </div>
</div>
`;

exports[`Atoms/Input InputExample play-test 1`] = `
<div style="display: flex; flex-direction: column; gap: 30px;">
</div>
`;

exports[`Atoms/Input InputExample smoke-test 1`] = `
<div style="display: flex; flex-direction: column; gap: 30px;">
</div>
`;

exports[`Atoms/Input InputTextVariants smoke-test 1`] = `
<div style="display: flex; flex-direction: column; gap: 30px;">
  <input type="text"
         placeholder="Plain text input"
         class="sc-iBAaJG djhrVw"
  >
  <input type="password"
         placeholder="Plain password input"
         class="sc-iBAaJG djhrVw"
  >
  <input type="email"
         placeholder="Plain email input"
         class="sc-iBAaJG djhrVw"
  >
  <textarea rows="1"
            placeholder="Join the discussion"
            class="sc-ftLKQv gJmmda"
  >
  </textarea>
</div>
`;
